# RPC

./: autobuild.sh
example/: user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
lib/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc
src/include/: mprpcconfig.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
